<resources>
    <string name="app_name">VR pizza</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="pizza_tab">Pizza</string>
    <string name="chicken_tab">Chicken</string>
    <string name="bread_tab">Bread</string>
    <string name="salads_tab">Salads</string>
    <string name="desserts_tab">Desserts</string>
    <string name="drinks_tab">Drinks</string>
    <string name="sauces_tab">Sauces</string>
    <string name="button_to_cart">To cart</string>
    <string name="format_ruble">%1$.2f руб.</string>
    <string name="format_size">%1$d гр.</string>
    <string name="to_cart_success">%1$s Added to cart</string>
    <string name="option_size_format">"%1$d sm."</string>
    <string name="pizza_option_classic">Classic</string>
    <string name="pizza_option_thin">Thin</string>
    <string name="pizza_option_cream">Cream</string>
    <string name="shopping_cart_title">Shopping cart</string>
    <string name="format_order_total">Total: %1$f руб.</string>
    <string name="button_order">Order</string>
    <string name="button_clear_order">Clear order</string>
    <string name="menu_item_shopping_cart">Shopping cart</string>
    <string name="menu_item_food_menu">Menu</string>
    <string name="action_toolbar_shopping_cart">Shopping cart</string>
    <string name="nav_news">News</string>
    <string name="nav_about_us">About us</string>
    <string name="nav_delivery">Delivery</string>
    <string name="place_order_title">Place an order</string>
    <string name="news_title">News</string>
    <string name="delivery_title">Delivery</string>
    <string name="about_us_title">Abous us</string>
    <string name="warning_in_development">Still in development</string>
    <string name="menu_title">Menu</string>
    <string name="place_order_delivery_address">Delivery address</string>
    <string name="place_order_city">City</string>
    <string name="place_order_street">Street</string>
    <string name="place_order_house_number">House</string>
    <string name="place_order_flat">Flat</string>
    <string name="place_order_info">Information</string>
    <string name="place_order_phone">Phone</string>
    <string name="place_order_email">Email</string>
    <string name="place_order_time_delivery">Delivery time</string>
    <string name="place_order_exists_coupon">Exists coupon</string>
    <string name="place_order_comment">Comment</string>
    <string name="place_order_payment_type">Payment type</string>
    <string name="place_order_button_send">Send</string>
    <string name="city_minsk">Minsk</string>
    <string name="city_grodno">Grodno</string>
    <string name="payment_type_cash">Cash</string>
    <string name="payment_type_card">Card</string>
    <string name="error_is_empty_format">Field "%1$s" must not be empty</string>
    <string name="order_result_title">Order successfully sent</string>
    <string name="order_result_msg">Thanks. Order successfully sent.</string>
</resources>
