<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rymasheuski.valery.vrpizza.placeorder.PlaceOrderActivity">


    <include layout="@layout/layout_toolbar_main"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_main"
        android:layout_above="@+id/button_send_order">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_delivery_address"
                android:layout_below="@id/toolbar_main"
                style="@style/PlaceOrderHeaderText"
                android:text="@string/place_order_delivery_address"/>

            <TextView
                android:id="@+id/tv_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/place_order_city"
                android:layout_below="@id/tv_delivery_address"/>

            <Spinner android:id="@+id/spinner_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_delivery_address"
                android:layout_toEndOf="@id/tv_city"/>

            <EditText
                android:id="@+id/et_street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_city"
                android:hint="@string/place_order_street"/>
            <EditText
                android:id="@+id/et_house"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_order_house_number"
                android:layout_below="@id/et_street"/>
            <EditText
                android:id="@+id/et_flat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_order_flat"
                android:layout_below="@id/et_house"/>


            <TextView
                android:id="@+id/tv_information"
                android:layout_below="@id/et_flat"
                style="@style/PlaceOrderHeaderText"
                android:text="@string/place_order_info"/>

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_information"
                android:hint="@string/place_order_phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_phone"
                android:hint="@string/place_order_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_delivery_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_email"
                android:hint="@string/place_order_time_delivery"
                android:inputType="time" />

            <EditText
                android:id="@+id/et_coupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_delivery_time"
                android:hint="@string/place_order_exists_coupon"
                />
            <EditText
                android:id="@+id/et_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_order_comment"
                android:layout_below="@id/et_coupon"/>

            <TextView
                android:id="@+id/tv_payment_type"
                android:layout_below="@id/et_comment"
                style="@style/PlaceOrderHeaderText"
                android:text="@string/place_order_payment_type"/>

            <Spinner android:id="@+id/spinner_payment_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_payment_type"
                />

        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/button_send_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/place_order_button_send"
        android:layout_alignParentBottom="true"/>



</RelativeLayout>
